Revise App.js, BuildJobTable.js & Add JobTablePagination.js for pagination
